Add team section with project statistics and update footer content in index.html; adjust team section styling in style.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <li><a href="#demo">Demo</a></li>
         <li><a href="#componenten">Componenten</a></li>
         <li><a href="#galerij">Galerij</a></li>
-        <li><a href="#team">Team</a></li>
       </ul>
     </nav>
   </header>
@@ -40,6 +39,32 @@
 
   <main>
     <section id="werking" class="section how-it-works">
+      
+    <section id="team" class="section team">
+      <h2 class="section-title">Project Statistieken</h2>
+
+      <div class="container">
+        <div class="project-stats">
+          <div class="stat">
+            <h3>150+</h3>
+            <p>Regels Arduino Code</p>
+          </div>
+          <div class="stat">
+            <h3>5</h3>
+            <p>Team Members</p>
+          </div>
+          <div class="stat">
+            <h3>12</h3>
+            <p>Weken Ontwikkeling</p>
+          </div>
+          <div class="stat">
+            <h3>100%</h3>
+            <p>Functioneel</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
       <div class="container">
         <h2 class="section-title">Hoe het werkt</h2>
 
@@ -385,6 +410,23 @@
 
   <footer>
     <div class="container">
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>Cube of Secrets</h3>
+          <p>Hackathon Project 2025 - Groep 25</p>
+          <p>Odisee Hogeschool - Campus Gent</p>
+        </div>
+        <div class="footer-section">
+          <h3>Technologieën</h3>
+          <p>Arduino Uno, VMA501 Kit, C++</p>
+          <p>HTML5, CSS3, JavaScript</p>
+        </div>
+        <div class="footer-section">
+          <h3>Contact</h3>
+          <p>Voor vragen over dit project:</p>
+          <p>hackathon@odisee.be</p>
+        </div>
+      </div>
       <div class="footer-bottom">
         <p>&copy; 2025 Cube of Secrets - Alle rechten voorbehouden 🚀</p>
       </div>
